[metadata]
name = photos
author = Christopher Brown
author_email = io@henrian.com
url = https://github.com/chbrown/photos-python
description = Photo management utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =
  click>=7.0
  colorama>=0.4.0
setup_requires =
  pytest-runner
  setuptools-scm
tests_require =
  pytest
  pytest-black
  pytest-cov

[options.entry_points]
console_scripts =
  photos = photos.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts =
  --black
  --cov=photos
  --cov-branch
